# viaNexus_mcpclient_sdk_python

./: LICENSE  README.md  pyproject.toml
examples/: advanced_usage_examples.py  simplified_anthropic_example.py
examples/clients/anthropic/: config_from_yaml.py  interactive_repl_chat.py  service_integration.py  single_questions.py
examples/clients/gemini/: basic_setup.py
src/gemini/runners/: runner.py
src/vianexus-mcpclient-sdk/gemini/tools/: mcp_toolset.py
src/vianexus-mcpclient-sdk/providers/: oauth.py
src/vianexus-mcpclient-sdk/servers/callback/: callback_server.py
src/vianexus_agent_client_sdk/gemini/runners/: runner.py
src/vianexus_agent_sdk/clients/: anthropic_client.py  base_mcp_client.py  enhanced_mcp_client.py  gemini_client.py  openai_client.py  streamable_http.py
src/vianexus_agent_sdk/clients/setup/: base_mcp_client.py  enhanced_mcp_client.py  streamable_http.py
src/vianexus_agent_sdk/gemini/agents/: llm_agent.py
src/vianexus_agent_sdk/gemini/runners/: runner.py
src/vianexus_agent_sdk/gemini/tools/: agent_toolset.py
src/vianexus_agent_sdk/mcp_client/: README.md  base_mcp_client.py  enhanced_mcp_client.py  streamable_http.py
src/vianexus_agent_sdk/providers/: oauth.py
src/vianexus_agent_sdk/servers/callback/: callback_server.py
src/vianexus_agent_sdk/tools/: get_config.py
src/vianexus_agent_sdk/types/: config.py
src/vianexus_agent_sdk/vianexus_agent_client_sdk/gemini/tools/: agent_toolset.py
src/vianexus_mcpclient_sdk/gemini/agents/: llm_agent.py
src/vianexus_mcpclient_sdk/gemini/runners/: runner.py
src/vianexus_mcpclient_sdk/gemini/tools/: mcp_toolset.py
src/vianexus_mcpclient_sdk/providers/: oauth.py
