[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vianexus_mcpclient_sdk_python"
version = "0.1.0"
authors = [
  { name="viaNexus", email="support@vianexus.com" },
]
description = "A Python SDK for the viaNexus MCP."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "google-adk==1.3.0",
    "pydantic==2.7.1",
    "google-generativeai==0.5.4",
    "requests==2.31.0",
    "httpx<=1.0.0",
    "anyio>=4.8.0",
    "mcp>=1.11.0"
]

[project.urls]
"Homepage" = "https://github.com/blueskynexus/viaNexus_mcpclient_sdk_python"
"Bug Tracker" = "https://github.com/blueskynexus/viaNexus_mcpclient_sdk_python/issues" 